--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "95623 46258",
-	"ownerNumberr": "95623 46258",
-	"botnumber": "95623 46258",
+	"ownerNumber": "9562346258",
+	"ownerNumberr": "9562346258",
+	"botnumber": "9562346258",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+95623 46258",
-	"donate": "95623 46258",
+	"wa": "wa.me/+9562346258,
+	"donate": "9562346258",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
 	"ownername": "© MISHIHA-MOD",
-	"botname":"「 Queen Alexa 」",
+	"botname":"「 MISHIHA 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 MISHIHA 」\n© MISHIHA-MOD"
 }
