--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 "name": "MISHIHA",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/MISHIHA/Queen-Alexa",
-  "logo": "https://www.linkpicture.com/q/HYPER-MOD-LOGO.jpg",
+  "logo": "https://www.linkpicture.com/q/MISHIHA-MOD-LOGO.jpg",
   "keywords": ["bot", "whatsapp", "whatsapp-bot"],
 
     "buildpacks": [
